--- a/roles/firth_packages/tasks/main.yml
+++ b/roles/firth_packages/tasks/main.yml
@@ -24,7 +24,7 @@
     method: GET
     headers:
       Accept: "application/json"
-  register: ondrej_php_ppa_info
+  register: firth_packages_ondrej_php_ppa_info
   notify:
     - Apt Cache Update
   tags:
@@ -40,7 +40,7 @@
     uris: [https://ppa.launchpadcontent.net/ondrej/php/ubuntu]
     suites: ["{{ ansible_facts['distribution_release'] }}"]
     components: [main]
-    signed_by: "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x{{  ondrej_php_ppa_info.json.signing_key_fingerprint }}"
+    signed_by: "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x{{  firth_packages_ondrej_php_ppa_info.json.signing_key_fingerprint }}"
   tags: php
 
 - name: Remove old PHP Packages
