--- a/roles/water_gkhs_filebot/defaults/main.yml
+++ b/roles/water_gkhs_filebot/defaults/main.yml
@@ -1,11 +1,11 @@
 ---
 # Package configuration
-filebot_version: 4.7
-filebot_mirror: https://get.filebot.net/filebot/FileBot_{{ filebot_version }}
+water_gkhs_filebot_filebot_version: 4.7
+water_gkhs_filebot_filebot_mirror: https://get.filebot.net/filebot/FileBot_{{ water_gkhs_filebot_filebot_version }}
 
-filebot_deb:
-  i386: FileBot_{{ filebot_version }}_i386.deb
-  x86_64: FileBot_{{ filebot_version }}_amd64.deb
-filebot_deb_url: "{{ filebot_mirror }}/{{ filebot_deb[ansible_architecture] }}"
-filebot_deb_bin: /usr/bin/filebot
-filebot_deb_tmp: /tmp/{{ filebot_deb[ansible_architecture] }}
+water_gkhs_filebot_filebot_deb:
+  i386: FileBot_{{ water_gkhs_filebot_filebot_version }}_i386.deb
+  x86_64: FileBot_{{ water_gkhs_filebot_filebot_version }}_amd64.deb
+water_gkhs_filebot_filebot_deb_url: "{{ water_gkhs_filebot_filebot_mirror }}/{{ water_gkhs_filebot_filebot_deb[ansible_architecture] }}"
+water_gkhs_filebot_filebot_deb_bin: /usr/bin/filebot
+water_gkhs_filebot_filebot_deb_tmp: /tmp/{{ water_gkhs_filebot_filebot_deb[ansible_architecture] }}
