--- a/roles/water_gkhs_nginx/tasks/main.yml
+++ b/roles/water_gkhs_nginx/tasks/main.yml
@@ -54,15 +54,15 @@
     - name: Slurp IP4 list
       ansible.builtin.slurp:
         src: /etc/nginx/tmp/ip4.txt
-      register: ipv4list
+      register: water_gkhs_nginx_ipv4list
     - name: Slurp IP6 list
       ansible.builtin.slurp:
         src: /etc/nginx/tmp/ip6.txt
-      register: ipv6list
+      register: water_gkhs_nginx_ipv6list
 
     - name: Update /etc/nginx/snippets/cloudflare-ips.nginx.conf
       ansible.builtin.copy:
-        content: "# Ansible Managed\n{{ (ipv4list['content'] | b64decode + '\n' + ipv6list['content'] | b64decode) | regex_replace('([0-9a-f.:/]+)', 'allow \\1;')
+        content: "# Ansible Managed\n{{ (water_gkhs_nginx_ipv4list['content'] | b64decode + '\n' + water_gkhs_nginx_ipv6list['content'] | b64decode) | regex_replace('([0-9a-f.:/]+)', 'allow \\1;')
           + '\nallow 127.0.0.1;\nallow ::1;\ndeny all;\n' }}"
         dest: /etc/nginx/snippets/cloudflare-ips.nginx.conf
         force: true
