--- a/roles/water_gkhs_web_errors/tasks/main.yml
+++ b/roles/water_gkhs_web_errors/tasks/main.yml
@@ -30,7 +30,7 @@
         mode: "0644"
 
     - name: "Nginx: check for installation"
-      register: nginx_installed
+      register: water_gkhs_web_errors_nginx_installed
       ansible.builtin.stat:
         path: /etc/nginx/nginx.conf
 
@@ -39,12 +39,12 @@
         src: config/errors_nginx.conf.j2
         dest: /etc/nginx/snippets/errors.conf
         mode: "0644"
-      when: nginx_installed.stat.exists
+      when: water_gkhs_web_errors_nginx_installed.stat.exists
       notify:
         - Restart nginx
 
     - name: "Apache: check for installation"
-      register: apache_installed
+      register: water_gkhs_web_errors_apache_installed
       ansible.builtin.stat:
         path: /etc/apache2/apache2.conf
 
@@ -53,7 +53,7 @@
         src: config/errors_apache.conf.j2
         dest: /etc/apache2/conf-enabled/errors.conf
         mode: "0644"
-      when: apache_installed.stat.exists
+      when: water_gkhs_web_errors_apache_installed.stat.exists
       notify:
         - restart apache
 
