--- a/roles/firth_sftp_docker/meta/main.yml
+++ b/roles/firth_sftp_docker/meta/main.yml
@@ -26,7 +26,6 @@ galaxy_info:
     - sftp
     - docker
 
-dependencies:
-  []
+dependencies: []
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
