--- a/roles/water_gkhs_flexget/tasks/main.yml
+++ b/roles/water_gkhs_flexget/tasks/main.yml
@@ -23,8 +23,7 @@
     name: flexget
     minute: 16,46
     user: "{{ media_user }}"
-    job:
-      "{{ media_home }}/.virtualenvs/flexget_{{ ansible_python_version }}/bin/python {{ media_home }}/.virtualenvs/flexget_{{ ansible_python_version }}/bin/flexget
+    job: "{{ media_home }}/.virtualenvs/flexget_{{ ansible_python_version }}/bin/python {{ media_home }}/.virtualenvs/flexget_{{ ansible_python_version }}/bin/flexget
       --cron execute"
     cron_file: flexget
   tags:
