--- a/roles/water_gkhs_mysql_backup/tasks/main.yml
+++ b/roles/water_gkhs_mysql_backup/tasks/main.yml
@@ -10,7 +10,8 @@
   block:
     - name: Determine required MySQL Python libraries.
       ansible.builtin.set_fact:
-        water_gkhs_mysql_backup_deb_mysql_python_package: "{% if 'python3' in ansible_python_interpreter | default('') %}python3-mysqldb{% else %}python-mysqldb{% endif %}"
+        water_gkhs_mysql_backup_deb_mysql_python_package: "{% if 'python3' in ansible_python_interpreter | default('') %}python3-mysqldb{% else %}python-mysqldb{%
+          endif %}"
 
     - name: Ensure Maria & MySQL Python libraries are installed.
       ansible.builtin.apt:
