Set changed_when to false for architecture retrieval tasks in Docker, GitHub CLI, and Jellyfin roles

--- a/roles/firth_docker/tasks/main.yml
+++ b/roles/firth_docker/tasks/main.yml
@@ -12,6 +12,7 @@
     - name: Get DEB architecture
       ansible.builtin.shell: dpkg --print-architecture
       register: firth_docker_deb_architecture
+      changed_when: false
 
     - name: Remove old docker repository from apt
       ansible.builtin.apt_repository:
