--- a/roles/water_gkhs_flexget/defaults/main.yml
+++ b/roles/water_gkhs_flexget/defaults/main.yml
@@ -1,2 +1,2 @@
 ---
-water_gkhs_flexget_flexget_tasks: none
+water_gkhs_flexget_flexget_tasks: "{{ flexget_tasks | default({'tasks': [{'none': None}]}) }}"
