--- a/roles/firth_packages/tasks/main.yml
+++ b/roles/firth_packages/tasks/main.yml
@@ -49,7 +49,7 @@
     pkg:
       - "{{ item }}"
       - "{{ item }}-*"
-  loop: "{{ remove_php_versions }}"
+  loop: "{{ remove_php_packages }}"
   ignore_errors: true
   tags: php
 
@@ -57,17 +57,17 @@
   ansible.builtin.apt:
     state: present
     pkg:
-      - "{{ php_version }}"
-      - "{{ php_version }}-bcmath"
-      - "{{ php_version }}-cgi"
-      - "{{ php_version }}-cli"
-      - "{{ php_version }}-common"
-      - "{{ php_version }}-curl"
-      - "{{ php_version }}-gd"
-      - "{{ php_version }}-intl"
-      - "{{ php_version }}-mbstring"
-      - "{{ php_version }}-mysql"
-      - "{{ php_version }}-opcache"
-      - "{{ php_version }}-readline"
-      - "{{ php_version }}-xml"
+      - "{{ php_package }}"
+      - "{{ php_package }}-bcmath"
+      - "{{ php_package }}-cgi"
+      - "{{ php_package }}-cli"
+      - "{{ php_package }}-common"
+      - "{{ php_package }}-curl"
+      - "{{ php_package }}-gd"
+      - "{{ php_package }}-intl"
+      - "{{ php_package }}-mbstring"
+      - "{{ php_package }}-mysql"
+      - "{{ php_package }}-opcache"
+      - "{{ php_package }}-readline"
+      - "{{ php_package }}-xml"
   tags: php
